Update body background color in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import "./index.css";
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     ></script>
   </head>
-  <body id="body" style="padding: 0; margin: 0">
+  <body id="body" class="bg-slate-50" style="padding: 0; margin: 0">
     <slot />
   </body>
 </html>
